--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html>
   <head>  
-  <link rel="shortcut icon" type="image/x-icon" href="favicon.ico"/>
  <title>Blanson TSA</title>
+  <link rel="shortcut icon" type="image/x-icon" href="favicon.ico"/> 
   <link rel="stylesheet" type="text/css" href="website.css">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="google-site-verification" content="DAdTIjMMDd9OCmfETjKDF15H4vSsi-HWeV3uK2Y2Fz0" />
  </head>
   <body>
      <iframe src="https://blansontsa.wixsite.com/blanson-tsa" style="position:fixed; top:-50px; left:0px; bottom:0px; right:0px; width:100%; height:105%; border:none; margin:0; padding:0; overflow:hidden; z-index:999999;">
