--- a/index.html
+++ b/index.html
@@ -1,11 +1,49 @@
 <!DOCTYPE html>
 <html>
-  <head>  
+  <head>
  <title>Blanson TSA</title>
-  <link rel="shortcut icon" type="image/x-icon" href="favicon.ico"/> 
+  <link rel="shortcut icon" type="image/x-icon" href="favicon.ico"/
+
   <link rel="stylesheet" type="text/css" href="website.css">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="google-site-verification" content="DAdTIjMMDd9OCmfETjKDF15H4vSsi-HWeV3uK2Y2Fz0" />
+  <script>
+    var alertmessage="You can adjust the website's size using CTRL plus + or CTRL plus - if the website does not fit the screen properly." 
+    var once_per_session=1
+    function get_cookie(Name) {
+      var search = Name + "="
+      var returnvalue = "";
+      if (document.cookie.length > 0) {
+        offset = document.cookie.indexOf(search)
+        if (offset != -1) {
+          offset += search.length
+          end = document.cookie.indexOf(";", offset);
+          if (end == -1)
+             end = document.cookie.length;
+          returnvalue=unescape(document.cookie.substring(offset, end))
+          }
+       }
+      return returnvalue;
+    }
+
+    function alertornot(){
+    if (get_cookie('alerted')==''){
+    loadalert()
+    document.cookie="alerted=yes"
+    }
+    }
+
+    function loadalert(){
+    alert(alertmessage)
+    }
+
+    if (once_per_session==0)
+    loadalert()
+    else
+    alertornot()
+    </script>
+
+
  </head>
   <body>
      <iframe src="https://blansontsa.wixsite.com/blanson-tsa" style="position:fixed; top:-50px; left:0px; bottom:0px; right:0px; width:100%; height:105%; border:none; margin:0; padding:0; overflow:hidden; z-index:999999;">
@@ -16,6 +54,9 @@
 if (screen.width <= 699) {
 document.location = "https://blansontsa.wixsite.com/blanson-tsa";
 }
-//-->
+ 
+
+
+
 </script>
 </html>
