alert box update

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="google-site-verification" content="DAdTIjMMDd9OCmfETjKDF15H4vSsi-HWeV3uK2Y2Fz0" />
   <script>
-    var alertmessage="You can adjust the website's size using CTRL plus + or CTRL plus - if the website does not fit the screen properly." 
+    var alertmessage="Adjust website size by CTRL + + or CTRL + - .\n*FOR PC USERS ONLY*" 
     var once_per_session=1
     function get_cookie(Name) {
       var search = Name + "="
