--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
   <link rel="stylesheet" type="text/css" href="website.css">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="google-site-verification" content="DAdTIjMMDd9OCmfETjKDF15H4vSsi-HWeV3uK2Y2Fz0" />
+  <!-- Description and keywords. --> 
+  <meta name="keywords" content="Blanson, Blanson TSA, Blanson Robotics, Blanson TSA Club, Blanson VEX, blanson tsa club, blanson tsa">
+  <meta name="description" content="Official page of the Blanson TSA, where TSA members can see news and updates.">
   <script>
     var alertmessage="Adjust website size by CTRL + + or CTRL + - .\n*FOR PC USERS ONLY*" 
     var once_per_session=1
