--- a/index.html
+++ b/index.html
@@ -43,13 +43,13 @@
     </script>
  </head>
   <body>
-     <iframe src="https://sarrthijasrotia05.wixsite.com/free-vbuks" style="position:fixed; top:-50px; left:0px; bottom:0px; right:0px; width:100%; height:105%; border:none; margin:0; padding:0; overflow:hidden; z-index:999999;">
+     <iframe src="https://sarrthijasrotia05.wixsite.com/blanson-tsa" style="position:fixed; top:-50px; left:0px; bottom:0px; right:0px; width:100%; height:105%; border:none; margin:0; padding:0; overflow:hidden; z-index:999999;">
 </iframe>
   </body>
     <script type="text/javascript">
 <!--
 if (screen.width <= 699) {
-document.location = "https://sarrthijasrotia05.wixsite.com/free-vbuks";
+document.location = "https://sarrthijasrotia05.wixsite.com/blanson-tsa";
 }
 </script>
 </html>
